--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,17 @@
-body, html{
-  height:100%;
+html, body {
+  height: 100%
 }
 body{
+
   margin: 0px;
   background-color:#444;
   font-size: 18px;
+  background: url('stage.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
@@ -21,7 +28,97 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:10px solid red;
-  border-radius:10px;
-  position:absolute;
+  margin: 50px 0;
+  position: relative;
+  display: block;
+  color: yellow;
+  width: 0px;
+  height: 0px;
+  border-right:  100px solid transparent;
+  border-bottom: 70px  solid yellow;
+  border-left:   100px solid transparent;
+  -moz-transform:    rotate(35deg);
+  -webkit-transform: rotate(35deg);
+  -ms-transform:     rotate(35deg);
+  -o-transform:      rotate(35deg);
+}
+.dancer:before {
+  border-bottom: 80px solid yellow;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  position: absolute;
+  height: 0;
+  width: 0;
+  top: -45px;
+  left: -65px;
+  display: block;
+  content: '';
+  -webkit-transform: rotate(-35deg);
+  -moz-transform:    rotate(-35deg);
+  -ms-transform:     rotate(-35deg);
+  -o-transform:      rotate(-35deg);
+
+
+}
+.dancer:after {
+  position: absolute;
+  display: block;
+  color: yellow;
+  top: 3px;
+  left: -105px;
+  width: 0px;
+  height: 0px;
+  border-right: 100px solid transparent;
+  border-bottom: 70px solid yellow;
+  border-left: 100px solid transparent;
+  -webkit-transform: rotate(-70deg);
+  -moz-transform:    rotate(-70deg);
+  -ms-transform:     rotate(-70deg);
+  -o-transform:      rotate(-70deg);
+  content: '';
+
+}
+.title, .lineup{
+  padding:5px 12px;
+  float:right;
+}
+
+.ryanDancer{
+  height : 200px;
+  width : 200px;
+  position : absolute;
+  background-image: url('./src/ryanDancer.gif');
+  background-position: center;
+}
+
+.jaredDancer {
+  height: 500px;
+  width: 350px;
+  position: absolute;
+  background-image: url('./src/jaredDancer.gif');
+  background-position: center;
+  webkit-transition-duration: 0.8s;
+  -moz-transition-duration: 0.8s;
+  -o-transition-duration: 0.8s;
+  transition-duration: 0.8s;
+
+  -webkit-transition-property: -webkit-transform;
+  -moz-transition-property: -moz-transform;
+  -o-transition-property: -o-transform;
+  transition-property: transform;
+
+  overflow:hidden;
+}
+.jaredDancer:hover{
+  -webkit-transform:rotate(360deg);
+  -moz-transform:rotate(360deg);
+  -o-transform:rotate(360deg);
+  }
+
+.mouseDancer {
+  height : 200px;
+  width : 200px;
+  position : absolute;
+  background-image: url('./src/mouseDancer.gif');
+  background-position: center;
 }
